== v1.2.0 2012-11-14
* SSL verification enabled by default
* Sparkbar token access support
* Fixed oauth2 CLI usage
* Model behaviors for CRUD operations
* Dirty module to help manage dirty attributes for updating a model
* Removed nonsensical "all" method for finder models
* ApiUser support for OAuth2 flow
* Subscriptions models
* Single session OAuth2 support
* Update RecipientIds attribute on subscribe/unsubscribe
* Restrict API wrapped json post data for hashes that have content
* Fix sorting on nils in accounts model
* Pluralize module
== v1.1.0 2012-08-07
* Upgraded faraday and other gems, cleand up the middleware
== v1.0.4 2012-07-26
* Moved to github for all development
== v1.0.3 2012-07-09
* Rental calendar
== v1.0.2 2012-05-30
* OpenId/Hybrid flow support
* OAuthSession does not support symbols as init
== v1.0.1 2012-04-30
* Fixed yaml config files
== v1.0.0 2012-04-20
* Switch to spark api branding from flexmls_api