@@ -3,3 +3,10 @@ source :rubygems
 # Refer to the flexmls_api.gemspec or Rakefile for dependency information
 gemspec :development_group => :test
 
+platforms :ruby do
+  gem 'yajl-ruby'
+end
+
+platforms :jruby do
+  gem 'jruby-openssl'
+end
