@@ -1,6 +1,13 @@
 module SparkApi
   module Configuration
 
+    begin
+      require 'yajl'
+      MultiJson.engine = "yajl"
+    rescue LoadError => e
+      # Using pure ruby JSON parser
+    end
+    
     # valid configuration options
     VALID_OPTION_KEYS = [:api_key, :api_secret, :api_user, :endpoint, 
       :user_agent, :version, :ssl, :ssl_verify, :oauth2_provider, :authentication_mode, 
